# doc-latch

./: .gitattributes  .gitignore  CHANGELOG.txt  DEVELOPMENT.md  README.md  docker-compose.sonar.yml  index.html  package-lock.json  package.json  sonar-project.properties  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.docker/: docker-compose.sonar.yml
.github/workflows/: ci.yml  pages.yml
docs/: index.html  site-content.json  styles.css
docs/de/: index.html
docs/en/: index.html
docs/fr/: index.html
docs/it/: index.html
scripts/: build-pages.cjs  extract-changelog.cjs  fix-rust-lcov-paths.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: Italian.nsh  hooks.nsh
src-tauri/src/: lib.rs  main.rs  test_support.rs
src-tauri/src/commands/: app.rs  document.rs  mod.rs  security.rs
src-tauri/src/commands/document/: tests.rs
src-tauri/src/commands/security/: tests.rs
src-tauri/src/pdf/: error.rs  mod.rs  reader.rs  renderer.rs  security.rs
src-tauri/src/pdf/error/: tests.rs
src-tauri/src/pdf/reader/: tests.rs
src-tauri/src/pdf/renderer/: tests.rs
src-tauri/src/pdf/security/: tests.rs
src-tauri/tests/: commands_security.rs  pdf_error.rs  pdf_security.rs
src/components/dialogs/: AddPasswordDialog.vue  BaseDialog.vue  DocInfoDialog.vue  InfoDialog.vue  PasswordDialog.vue  SecurityInfoDialog.vue  SettingsDialog.vue
src/components/layout/: BannerDefaultApp.vue  Sidebar.vue  SplitTabHeader.vue  SplitToggle.vue  StatusBar.vue  TabBar.vue  TitleBar.vue  Toolbar.vue
src/components/partials/: HomeRecent.vue
src/components/viewer/: HomeScreen.vue  PageCanvas.vue  PdfViewer.vue  SplitPane.vue  ThumbCanvas.vue
src/composables/: useKeyboard.ts  usePageCanvas.ts  usePageRenderCache.ts  usePdf.ts  usePdfFormat.ts  useRenderQueue.ts  useTabDrag.ts  useWheelGesture.ts
src/i18n/: de.json  en.json  fr.json  index.ts  it.json
src/stores/: document.ts  recent.ts  ui.ts
src/styles/: _mixins.scss  _placeholders.scss  _settings.scss  _themes.scss  _variables.scss  global.scss
src/types/: env.d.ts  pdf.ts
tests/: main.spec.ts  setup.ts
tests/components/: App.spec.ts
tests/components/dialogs/: AddPasswordDialog.spec.ts  BaseDialog.spec.ts  DocInfoDialog.spec.ts  InfoDialog.spec.ts  PasswordDialog.spec.ts  RemovePasswordDialog.spec.ts  SecurityInfoDialog.spec.ts  SettingsDialog.spec.ts
tests/components/layout/: Sidebar.spec.ts  SplitToggle.spec.ts  (+5 more)
tests/composables/: useKeyboard.spec.ts  usePageCanvas.spec.ts  usePdf.spec.ts  usePdfFormat.spec.ts  useRenderQueue.spec.ts  useTabDrag.spec.ts
tests/helpers/: testPlugins.ts
tests/stores/: document.spec.ts  recent.spec.ts  ui.spec.ts
(+25 files in other folders)
