[package]
name = "doclatch"
version = "1.0.0"
description = "DocLatch — Tauri 2 + Rust"
authors = []
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "doclatch"
path = "src/main.rs"

[lib]
name = "doclatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.0", features = [] }

# Tauri plugins
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"

# PDF parsing and writing
lopdf = "0.42"

# Random file-encryption keys/IDs for PDF encryption
rand = "0.10"

# PDF rendering via PDFium
pdfium-render = { version = "0.8", features = ["thread_safe"] }

# Image encoding (PNG export from pdfium bitmap)
image = { version = "0.25", default-features = false, features = ["png"] }

# Base64 encoding for IPC transport
base64 = "0.22"

# Error handling
thiserror = "1.0"

# Serialization (required by Tauri IPC)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Temporary-file creation for the `test_support` helpers, only linked when
# the `test-support` feature is on (unit tests, or integration tests in `tests/`).
tempfile = { version = "3.10", optional = true }

[features]
test-support = ["tempfile"]

[dev-dependencies]
doclatch = { path = ".", features = ["test-support"] }

[profile.release]
# Optimize for size in release builds
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
